# sdirg3

./: .gitignore
.ci/: build_check.sh  format_check.sh
.github/workflows/: ci.yml
backend/: CMakeLists.txt
backend/generator/: CMakeLists.txt
backend/generator/include/: config_template.templ  correctors.h  factory.h  fillers.h  generator.h  helper.h  initials.h
backend/generator/sources/: factory.cpp  fillers.cpp  generator.cpp  initials.cpp
backend/geometry/: geometry.cpp  geometry.h  polygon.cpp  polygon.h  vertex.h
frontend/: CMakeLists.txt  main.cpp
frontend/GeneratorConfigWidget/: GeneratorConfigWidget.cpp  GeneratorConfigWidget.h  GeneratorConfigWidget.ui
frontend/area/: area.cpp  area.h
frontend/editor/: editor.cpp  editor.h
frontend/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
